ejercicio zombies finalizado Alberto Vargas

--- a/apocalypsis-zombie.ipynb
+++ b/apocalypsis-zombie.ipynb
@@ -22,9 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Si no fallas puedes matar  30  zombies\n"
+     ]
+    }
+   ],
    "source": [
     "armas = ['pistola','escopeta']\n",
     "\n",
@@ -33,7 +41,10 @@
     "    'escopeta': [2, 2, 2, 2, 2]\n",
     "}\n",
     "\n",
-    "# your code\n"
+    "# your code\n",
+    "for municion in cargadores.items():\n",
+    "    municion=sum(cargadores['pistola'])+sum(cargadores['escopeta'])\n",
+    "print('Si no fallas puedes matar ', municion, ' zombies')\n"
    ]
   },
   {
@@ -52,9 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "158\n"
+     ]
+    }
+   ],
    "source": [
     "armas = ['pistola', 'ametralladora', 'escopeta', 'fusil de francotirador']\n",
     "\n",
@@ -65,7 +84,14 @@
     "    'fusil de francotirador': [1, 2, 4]\n",
     "}\n",
     "\n",
-    "# your code\n"
+    "# your code. Lo he hecho sin usar la lista de armas...Como lo que importa es\n",
+    "# el número de balas dentro de cada cargador... No sabría hacerlo de otra forma\n",
+    "\n",
+    "disparos=[]\n",
+    "\n",
+    "for municion in cargadores:\n",
+    "    disparos.append(sum(cargadores[municion]))\n",
+    "print(sum(disparos))"
    ]
   },
   {
@@ -77,9 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "158\n"
+     ]
+    }
+   ],
    "source": [
     "armas = ['pistola', 'ametralladora', 'escopeta', 'fusil de francotirador']\n",
     "\n",
@@ -91,7 +125,15 @@
     "    'bazoka': [1, 1]\n",
     "}\n",
     "\n",
-    "# your code\n"
+    "    \n",
+    "# your code\n",
+    "disparos=[]\n",
+    "\n",
+    "for tipo,municion in cargadores.items():\n",
+    "    if tipo in armas:\n",
+    "        cada_arma=sum(municion)\n",
+    "        disparos.append(cada_arma)\n",
+    "print(sum(disparos))"
    ]
   },
   {
@@ -103,9 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "151\n"
+     ]
+    }
+   ],
    "source": [
     "armas = ['pistola', 'ametralladora', 'escopeta', 'fusil de francotirador']\n",
     "\n",
@@ -115,8 +165,23 @@
     "    'escopeta': [2, 2, 2, 1] \n",
     "}\n",
     "\n",
-    "# your code\n"
+    "\n",
+    "# your code\n",
+    "disparos=[]\n",
+    "\n",
+    "for tipo,municion in cargadores.items():\n",
+    "    if tipo in armas and tipo in cargadores:\n",
+    "        cada_arma=sum(municion)\n",
+    "        disparos.append(cada_arma)\n",
+    "print(sum(disparos))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -135,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
